--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -18,7 +18,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.bootcamp.globant.SearchActivity"
+            android:name="com.bootcamp.globant.LoginActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -31,6 +31,10 @@
                 <category android:name="android.intent.category.BROWSABLE" />
                 <data android:scheme="oauth" android:host="t4jsample"/>
             </intent-filter>
+        </activity>
+        
+        <activity android:name="com.bootcamp.globant.SearchActivity"
+            	  android:parentActivityName="ar.com.globant.githubrepository.GitHubMainActivity">
         </activity>
         
         <provider
